# vn-streamer

./: .appveyor.yml  .gitignore  NOTICE  README.md
client/html5/: client.js  index.html  style.css
server/: CMakeLists.txt
server/gui/: CMakeLists.txt
server/gui/src/: main-window.cpp  main-window.h  main-window.ui  main.cpp  options-window.cpp  options-window.h  options-window.ui
server/lib/: CMakeLists.txt
server/lib/src/: command.h  logger.cpp  logger.h  profile.cpp  profile.h  streamer-server-client.cpp  streamer-server-client.h  streamer-server-fake-client.h  streamer-server-websocket-client.cpp  streamer-server.cpp  streamer-server.h  translation-aggregator-controller.cpp  translation-aggregator-controller.h  visual-novel-controller.cpp  visual-novel-controller.h  window-controller.cpp  window-controller.h  windows-utils.cpp  windows-utils.h
server/lib/src/commands/: composite-window-command.cpp  composite-window-command.h  keyboard-window-command.cpp  keyboard-window-command.h  mouse-window-command.cpp  mouse-window-command.h  sleep-window-command.cpp  sleep-window-command.h  window-command-factory.cpp  window-command-factory.h  window-command.cpp  window-command.h
server/lib/src/server/: streamer-server-client.cpp  streamer-server-fake-client.cpp  streamer-server-fake-client.h  streamer-server-websocket-client.h  streamer-server.cpp  streamer-server.h
